--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :name %>
     <%= f.input :address %>
     <%= f.input :phone_number %>
-    <%= f.input :category %>
+    <%= f.input :category, as: :select, collection: %w(chinese italian japanese french belgian)  %>
   </div>
 
   <div class="form-actions">
