--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Yelp</h1>
-Add a new restaurant
+<%= link_to 'Yelp', restaurants_path, class: "yelp" %>
+<div>Add a new restaurant</div>
 
 <%= render 'form', restaurant: @restaurant %>
 
