--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Yelp</h1>
-Edit a restaurant
+<%= link_to 'Yelp', restaurants_path, class: "yelp" %>
+<div>Edit a restaurant</div>
 
 <%= render 'form', restaurant: @restaurant %>
 
