--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Yelp</h1>
+<%= link_to 'Yelp', restaurants_path, class: "yelp" %>
 
-<h1>Create a review</h1>
+<div><h1>Create a review</h1></div>
 
 <%= simple_form_for([@restaurant, @review]) do |f| %>
  <%= f.error_notification %>
